added the second header

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi aut rerum a nostrum corrupti voluptatum consequuntur nam voluptate corporis laudantium? Animi consequatur harum aperiam velit nesciunt similique consectetur laboriosam laudantium!
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. At neque laboriosam inventore magnam fuga nihil, rerum cum, placeat quod vero voluptas. Veniam impedit officia rerum quaerat, incidunt earum accusantium esse.
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius ex unde distinctio dolorum. Recusandae veritatis ab unde, voluptatibus et ipsa cupiditate? Necessitatibus libero ullam saepe facilis voluptates. Obcaecati, ut nihil.
-        
+
     </p>
+    <h2>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur eveniet mollitia recusandae perspiciatis corrupti excepturi nam facere. Quam molestias accusamus tempore ipsa. Dolorum similique repellendus incidunt eos dolore. Saepe, pariatur.
+    </h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident minima optio saepe eligendi. Libero modi suscipit corporis voluptatem quo vero error nobis eos nam assumenda, temporibus aperiam dignissimos praesentium doloremque.
+
 
 
 </body>
